# src/config/swagger.yaml
@@ -304,3 +304,41 @@ paths:
                   message:
                     type: string
                     example: "Failed to delete tasks"
+
+  /api/deleteCompletedToDo:
+    delete:
+      summary: Delete all completed tasks
+      description: Deletes all tasks that have been marked as completed from the database.
+      tags:
+        - ToDo
+      responses:
+        200:
+          description: All completed tasks deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "All completed tasks deleted successfully"
+        404:
+          description: No completed tasks found to delete
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "No completed tasks found to delete"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Failed to delete completed tasks"
